--- a/src/components/cart/cart-product/cart-product.component.scss
+++ b/src/components/cart/cart-product/cart-product.component.scss
@@ -35,12 +35,17 @@
 
     .icon {
       svg {
-        width: 13px;
+        width: 20px;
       }
     }
 
   }
-  .item-remove{
+  .item-remove, .quantity-block{
     text-align: right;
+    .icon {
+      svg {
+        width: 13px;
+      }
+    }
   }
 }
