--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,4 +1,5 @@
 @import "mixins";
+
 * {
   box-sizing: border-box;
 }
@@ -21,8 +22,31 @@
   .product {
     text-align: center;
     margin-bottom: 20px;
-    //margin: 20px 10px;
-
+    .img-product{
+      position: relative;
+      img{
+        transition: 0.5s ease all;
+      }
+      .wish-icon{
+        opacity: 0;
+        position: absolute;
+        top: 50%;  /* position the top  edge of the element at the middle of the parent */
+        left: 50%; /* position the left edge of the element at the middle of the parent */
+        transform: translate(-50%, -50%);
+        transition: 0.5s ease all;
+        svg{
+          width: 30px;
+        }
+      }
+      &:hover{
+        img{
+          opacity: 0.3;
+        }
+        .wish-icon {
+          opacity: 1;
+        }
+      }
+    }
     .product-footer {
       display: flex;
       justify-content: space-between;
@@ -44,6 +68,7 @@
       object-position: center;
     }
   }
+
 }
 
 .card {
@@ -51,15 +76,39 @@
   border-radius: 4px;
   padding: 15px;
   transition: 0.5s ease all;
+  cursor: pointer;
 
   &:hover {
     box-shadow: 0 5px 25px 0 #00000048;
     transform: translateY(3px);
   }
 }
-.review-item{
+
+.review-item {
   margin: 20px 10px;
 }
-.icon{
+
+.icon {
   @include icon;
+}
+
+.margin-top-bottom {
+  margin: 15px 0;
+}
+
+.edit, .save, .remove, .prev, .next{
+  margin: 0 5px;
+  svg{
+    fill: $color_1;
+    width: 20px;
+  }
+}
+.gallery{
+  img{
+    width: 100%;
+  }
+}
+.size-full{
+  width: 100%;
+  height: 100%;
 }
