--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -35,12 +35,20 @@
   width: calc(33.3% - (#{$gap} * 2));
   margin: $gap;
 }
+.col-2-3 {
+  width: calc(66.6% - (#{$gap} * 2));
+  margin: $gap;
+}
 .col-1-4 {
   width: calc(25% - (#{$gap} * 2));
   margin: $gap;
 }
 .col-1-5 {
   width: calc(20% - (#{$gap} * 2));
+  margin: $gap;
+}
+.col-4-5 {
+  width: calc(80% - (#{$gap} * 2));
   margin: $gap;
 }
 .content-right-aligned {
