Adding single page for products, fixing issues with wishlist and cart

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $color_2: #161a0b;
 $color_3: #222622;
 $color_4: #d2d0d0;
 $color_5: rgba(226, 232, 212, 0.21);
-$color_hover: #4d7414;;
+$color_hover: #4d7414;
+$red: #ee7774;
 
 
