--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -22,31 +22,7 @@
   .product {
     text-align: center;
     margin-bottom: 20px;
-    .img-product{
-      position: relative;
-      img{
-        transition: 0.5s ease all;
-      }
-      .wish-icon{
-        opacity: 0;
-        position: absolute;
-        top: 50%;  /* position the top  edge of the element at the middle of the parent */
-        left: 50%; /* position the left edge of the element at the middle of the parent */
-        transform: translate(-50%, -50%);
-        transition: 0.5s ease all;
-        svg{
-          width: 30px;
-        }
-      }
-      &:hover{
-        img{
-          opacity: 0.3;
-        }
-        .wish-icon {
-          opacity: 1;
-        }
-      }
-    }
+
     .product-footer {
       display: flex;
       justify-content: space-between;
@@ -70,7 +46,52 @@
   }
 
 }
+.img-product {
+  position: relative;
 
+  img {
+    transition: 0.5s ease all;
+  }
+
+  .wish-icon {
+    opacity: 0;
+    position: absolute;
+    top: 50%; /* position the top  edge of the element at the middle of the parent */
+    left: 50%; /* position the left edge of the element at the middle of the parent */
+    transform: translate(-50%, -50%);
+    transition: 0.5s ease all;
+
+    svg {
+      width: 30px;
+    }
+  }
+
+  &:hover {
+    img {
+      opacity: 0.3;
+    }
+
+    .wish-icon {
+      opacity: 1;
+    }
+  }
+}
+
+.img-product.product-added-in-wishlist {
+  img {
+    opacity: 0.5;
+  }
+
+  a {
+    top: 5px;
+    opacity: 1;
+
+    svg {
+      width: 20px;
+      fill: $red;
+    }
+  }
+}
 .card {
   box-shadow: 0 5px 18px 0 #00000024;
   border-radius: 4px;
@@ -87,7 +108,9 @@
 .review-item {
   margin: 20px 10px;
 }
-
+.no-margin{
+  margin: 0;
+}
 .icon {
   @include icon;
 }
@@ -96,19 +119,57 @@
   margin: 15px 0;
 }
 
-.edit, .save, .remove, .prev, .next{
+.edit, .save, .remove, .prev, .next {
   margin: 0 5px;
-  svg{
+
+  svg {
     fill: $color_1;
     width: 20px;
   }
 }
-.gallery{
-  img{
+
+.gallery {
+  img {
     width: 100%;
   }
 }
-.size-full{
+
+.size-full {
   width: 100%;
   height: 100%;
+}
+
+.breadcrumps {
+  .separator {
+    padding: 0 5px;
+
+    svg {
+      width: 8px;
+      fill: $color_1;
+    }
+  }
+
+}
+
+.bell {
+  svg {
+    margin-top: 5px;
+    width: 25px;
+  }
+}
+.added-to-cart.notification{
+  position: absolute;
+  right: -15px;
+  background: #fff;
+  left: auto;
+  margin-top: -50px;
+}
+
+.closeIcon{
+  fill: $color_1;
+  position: absolute;
+  right: 20px;
+  width: 10px;
+  top: 20px;
+  cursor: pointer;
 }
