--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -6,7 +6,9 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Playfair Display', serif;
   margin: 10px 0;
 }
-
+h1{
+  font-size: 40px;
+}
 p, span, a, input, textarea {
   color: $color_3;
   font-family: 'Roboto', sans-serif;
@@ -21,4 +23,5 @@ button,
 input,
 textarea{
   font-size: 16px;
+  line-height: 1.5;
 }
